Desktop site style complete. May tweak transistions after mobile reponsoiveness added

--- a/index.html
+++ b/index.html
@@ -152,13 +152,11 @@
               <h1>Thesis exhibit</h1>
         </div>
         <div class="section exhibit">  
-          <div class="divide-left">
-              <div class="main-image">
-                  <video controls>
+          <div class="divide-left">           
+                  <video autoplay>
                       <source src="resources/videos/thesis.mp4" type="video/mp4">
-                  </video>
-              </div>
-              <h2>Reimagine urban</h2>
+                  </video>    
+              <h3>Reimagine urban</h3>
               <p class="quote">&quot;Curabitur vitea libero in ipsum porttitor consequat.
               Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna.
               Phasellus sed consequat ex. Etim eget magna laoreet, efficitur dolor consequat, tristique ligula.&quot;</p>
@@ -170,7 +168,7 @@
                       <img src="resources/images/thesis-fisma.jpg">
                   </div>
                   <div class="article-text">
-                      <h2>Fisma: Design and Prototype</h2>
+                      <h3>Fisma: Design and Prototype</h3>
                       <p>Designer showcase of new prototype product</p>
                   </div>
               </div>
@@ -179,7 +177,7 @@
                       <img src="resources/images/thesis-now-and-then.jpg">
                   </div>
                   <div class="article-text">
-                      <h2>Now and then</h2>
+                      <h3>Now and then</h3>
                       <p>Research study about New York</p>
                   </div>     
               </div>
